syntax = "proto3";

package notification;
option go_package = "./gen/go;notification";

service NotificationService {
  rpc SendNotification(SendRequest) returns (SendResponse);
}

message SendRequest {
  string user_id = 1;
  string channel = 2; // sms, email, telegram
  string message = 3;
}

message SendResponse {
  bool success = 1;
  string message_id = 2;
}